--- a/PortFolion/PortFolion/Views/AccountEditWindow.xaml
+++ b/PortFolion/PortFolion/Views/AccountEditWindow.xaml
@@ -122,7 +122,7 @@
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                                 <TextBlock Text="{Binding Code}" Margin="0,0,5,0"/>
                                 <TextBlock Text="{Binding Name}" Margin="5,0,0,0"/>
-                                <ddmb:DropDownMenuButton Margin="3" Style="{DynamicResource MetroToggleButton}">
+                                <!--<ddmb:DropDownMenuButton Margin="3" Style="{DynamicResource MetroToggleButton}">
                                     <TextBlock Text="編"/>
                                     <ddmb:DropDownMenuButton.DropDownContextMenu>
                                         <ContextMenu ItemsSource="{Binding MenuList}">
@@ -134,8 +134,18 @@
                                             </ContextMenu.ItemContainerStyle>
                                         </ContextMenu>
                                     </ddmb:DropDownMenuButton.DropDownContextMenu>
-                                </ddmb:DropDownMenuButton>
-                                <!--<Button Content="▼"/>-->
+                                </ddmb:DropDownMenuButton>-->
+
+                                <mah:DropDownButton VerticalContentAlignment="Center"
+                                                Width="auto" Margin="3,0,0,0"
+                                                Content="" ItemsSource="{Binding MenuList}" >
+                                    <mah:DropDownButton.ItemContainerStyle>
+                                        <Style TargetType="MenuItem">
+                                            <Setter Property="Header" Value="{Binding Header}"/>
+                                            <Setter Property="Command" Value="{Binding MenuCommand}"/>
+                                        </Style>
+                                    </mah:DropDownButton.ItemContainerStyle>
+                                </mah:DropDownButton>
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
