--- a/PortFolion/PortFolion/EditComponent/ListTab.xaml
+++ b/PortFolion/PortFolion/EditComponent/ListTab.xaml
@@ -219,7 +219,7 @@
                     <!--<Style TargetType="TreeView" BasedOn="{StaticResource tree:TreeListView}"></Style>-->
                     <!--Select elements-->
                     <selector:NodeTemplateSelector x:Key="NodeTemplateSelector"/>
-                    <DataTemplate x:Key="NodeTemplate" DataType="{x:Type vm:CommonNodeVM}">
+                    <DataTemplate x:Key="NodeTemplate" DataType="{x:Type vm:_CommonNodeVM}">
                         <StackPanel Orientation="Horizontal" >
                             <tree:TreeListViewExpander x:Name="TreeExpander" Margin="3,0"/>
                             <TextBlock Text="{Binding Code}" VerticalAlignment="Center" Margin="0,0"/>
@@ -261,7 +261,7 @@
                             </StackPanel.ContextMenu>
                         </StackPanel>
                     </DataTemplate>
-                    <DataTemplate x:Key="LeafTemplate" DataType="{x:Type vm:CommonNodeVM}">
+                    <DataTemplate x:Key="LeafTemplate" DataType="{x:Type vm:_CommonNodeVM}">
                         <StackPanel Orientation="Horizontal">
                             <tree:TreeListViewExpander x:Name="TreeExpander" Margin="3,0"/>
                             <TextBlock Text="{Binding Code}" VerticalAlignment="Center" Margin="0,0"/>
@@ -331,7 +331,7 @@
             </Grid>
         </Grid>
         <GridSplitter Grid.Column="2" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="5"/>
-        <Grid Grid.Column="3" Margin="5,0,0,0">
+        <Grid Grid.Column="3">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="*"/>
