--- a/PortFolion/PortFolion/EditComponent/ListTab.xaml
+++ b/PortFolion/PortFolion/EditComponent/ListTab.xaml
@@ -13,7 +13,7 @@
              xmlns:converter="clr-namespace:PortFolion.Views.Converter"
              xmlns:tree="clr-namespace:System.Windows.Controls;assembly=TreeListView"
              xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-             xmlns:ddmb="clr-namespace:DropDownMenuButton;assembly=DropDownMenuButton"
+             xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="1100">
     <Grid>
@@ -215,33 +215,15 @@
                         </Setter>
                     </Style>
                     
-                    <!--<SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Gray"/>-->
-                    <!--<Style TargetType="TreeView" BasedOn="{StaticResource tree:TreeListView}"></Style>-->
-                    <!--Select elements-->
                     <selector:NodeTemplateSelector x:Key="NodeTemplateSelector"/>
                     <DataTemplate x:Key="NodeTemplate" DataType="{x:Type vm:CommonNodeVM}">
                         <StackPanel Orientation="Horizontal" >
                             <tree:TreeListViewExpander x:Name="TreeExpander" Margin="3,0"/>
                             <TextBlock Text="{Binding Code}" VerticalAlignment="Center" Margin="0,0"/>
                             <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="3,0"/>
-                            <!--<ddmb:DropDownMenuButton Style="{DynamicResource MetroToggleButton}" Margin="3,0">
-                                --><!--<StackPanel Orientation="Horizontal ">--><!--
-                                <TextBlock Text="編"/>
-                                --><!--<Path Width="8" Height="6" Margin="0,0,0,0" Stretch="Fill" Fill="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ddmb:DropDownMenuButton}},Path=Foreground}" Data="F1 M 57.5692,88L 99.1384,16L 16,16L 57.5692,88 Z "/>-->
-                                <!--</StackPanel>--><!--
-                                <ddmb:DropDownMenuButton.DropDownContextMenu>
-                                    <ContextMenu ItemsSource="{Binding MenuList}">
-                                        <ContextMenu.ItemContainerStyle>
-                                            <Style TargetType="MenuItem">
-                                                <Setter Property="Header" Value="{Binding Header}"/>
-                                                <Setter Property="Command" Value="{Binding MenuCommand}"/>
-                                            </Style>
-                                        </ContextMenu.ItemContainerStyle>
-                                    </ContextMenu>
-                                </ddmb:DropDownMenuButton.DropDownContextMenu>
-                            </ddmb:DropDownMenuButton>-->
+                            
                             <mah:DropDownButton VerticalContentAlignment="Center"
-                                                Content="" ItemsSource="{Binding MenuList}" >
+                                                Content="{iconPacks:PackIconMaterial Kind=LeadPencil,Width=13,Height=13}" ItemsSource="{Binding MenuList}" >
                                     <mah:DropDownButton.ItemContainerStyle>
                                     <Style TargetType="MenuItem">
                                         <Setter Property="Icon" Value="{Binding Icon}"/>
@@ -268,6 +250,16 @@
                             <tree:TreeListViewExpander x:Name="TreeExpander" Margin="3,0"/>
                             <TextBlock Text="{Binding Code}" VerticalAlignment="Center" Margin="0,0"/>
                             <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="3,0"/>
+                            <Button Width="22" Height="22" Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}">
+                                <iconPacks:PackIconMaterial Width="13"
+                                              Height="13"
+                                              Kind="Timetable" />
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="Click">
+                                        <l:LivetCallMethodAction MethodTarget="{Binding}" MethodName="DisplayHistory"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Button>
                         </StackPanel>
                     </DataTemplate>
                 </tree:TreeListView.Resources>
@@ -348,7 +340,7 @@
                     </Style>
                 </DataGrid.Resources>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="日付" Binding="{Binding CurrentDate,StringFormat=yyyy/MM/dd}"
+                    <DataGridTextColumn Header="日付" Binding="{Binding CurrentDate,StringFormat=yyyy/M/d}"
                                         CanUserReorder="True" CanUserResize="True" CanUserSort="False"/>
                     <DataGridTextColumn Binding="{Binding TradeQuantity}" CanUserReorder="True" CanUserResize="True" CanUserSort="False">
                         <DataGridTextColumn.HeaderTemplate>
